card spacing fixed

--- a/ghi/src/FavoritesPage.css
+++ b/ghi/src/FavoritesPage.css
@@ -25,3 +25,12 @@
   z-index: 1;
   width: 39px;
 }
+
+.image-box1 {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  display: flex;
+  left: 120px;
+}
